--- a/.github/workflows/concrete_cpu_test.yml
+++ b/.github/workflows/concrete_cpu_test.yml
@@ -1,17 +1,28 @@
-name: Concrete CPU - Tests
+name: concrete-cpu test
 
 on:
-  workflow_call:
   workflow_dispatch:
+  pull_request:
+      paths:
+        - .github/workflows/concrete_cpu_test.yml
+        - backends/concrete-cpu/**
+  push:
+    branches:
+      - 'main'
+      - 'release/*'
 
 concurrency:
-  group: concrete_cpu_test-${{ github.ref }}
+  group: concrete_cpu_test_${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 env:
   CARGO_TERM_COLOR: always
 jobs:
   tests-linux:
+    strategy:
+      fail-fast: false
+      matrix:
+        runson: ["ubuntu-20.04"]
     runs-on: ubuntu-20.04
     env:
       RUSTFLAGS: -D warnings
@@ -57,39 +68,3 @@ jobs:
         run: |
           cd backends/concrete-cpu/implementation
           cargo test --no-fail-fast --all-targets --features=nightly
-
-  tests-mac_x86:
-    runs-on: macos-11
-    env:
-      RUSTFLAGS: -D warnings
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Setup rust toolchain for concrete-cpu
-        uses: ./.github/workflows/setup_rust_toolchain_for_concrete_cpu
-
-      - name: Download cargo cache
-        uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab # v2.7.5
-
-      - name: Tests
-        run: |
-          cd backends/concrete-cpu/implementation
-          cargo test --no-fail-fast --all-targets
-
-  tests-mac-m1:
-    runs-on: "aws-mac2-metal"
-    env:
-      RUSTFLAGS: -D warnings
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Setup rust toolchain for concrete-cpu
-        uses: ./.github/workflows/setup_rust_toolchain_for_concrete_cpu
-
-      - name: Download cargo cache
-        uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab # v2.7.5
-
-      - name: Tests
-        run: |
-          cd backends/concrete-cpu/implementation
-          cargo test --no-fail-fast --all-targets
