--- a/.github/workflows/concrete_ml_test.yml
+++ b/.github/workflows/concrete_ml_test.yml
@@ -1,21 +1,25 @@
-name: concrete-python benchmark linux-cpu
+name: concrete-ml test
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 1 * * SAT"
   pull_request:
     paths:
-      - .github/workflows/concrete_pyhon_benchmark.yml
+      - .github/workflows/concrete_ml_test.yml
+      - frontends/concrete-python/**
   push:
     branches:
       - 'main'
       - 'release/*'
+
 env:
   DOCKER_IMAGE: ghcr.io/zama-ai/concrete-compiler
+  ACTION_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+  SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+  SLACK_USERNAME: ${{ secrets.BOT_USERNAME }}
+  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
 concurrency:
-  group: concrete_python_benchmark_${{ github.ref }}
+  group: concrete_ml_test_${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
@@ -26,16 +30,19 @@ jobs:
     steps:
       - name: Start instance
         id: start-instance
-        uses: zama-ai/slab-github-runner@801df0b8db5ea2b06128b7476c652f5ed5f193a8
+        uses: zama-ai/slab-github-runner@447a2d0fd2d1a9d647aa0d0723a6e9255372f261
         with:
           mode: start
           github-token: ${{ secrets.SLAB_ACTION_TOKEN }}
           slab-url: ${{ secrets.SLAB_BASE_URL }}
           job-secret: ${{ secrets.JOB_SECRET }}
           backend: aws
-          profile: cpu-bench
+          profile: cpu-test
 
-  concrete-python-benchmarks:
+  build-and-run-tests:
+    strategy:
+      matrix:
+        python-version: ["3.8"]
     needs: setup-instance
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
     steps:
@@ -43,9 +50,15 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           submodules: recursive
-          fetch-depth: 0
+      - name: Set release version
+        run: echo "__version__ = \"$(date +"%Y.%m.%d")\"" >| frontends/concrete-python/version.txt
+      - name: Expose release version from Python
+        run: cp frontends/concrete-python/version.txt frontends/concrete-python/concrete/fhe/version.py
 
-      - name: Benchmark
+      - name: Create build directory
+        run: mkdir build
+
+      - name: Build wheel
         uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
         id: build-compiler-bindings
         with:
@@ -60,73 +73,62 @@ jobs:
           run: |
             set -e
             rm -rf /build/*
-
+            
             export PYTHON=${{ format('python{0}', matrix.python-version) }}
             echo "Using $PYTHON"
 
             cd /concrete/frontends/concrete-python
             make PYTHON=$PYTHON venv
             source .venv/bin/activate
-
+            
             cd /concrete/compilers/concrete-compiler/compiler
             make BUILD_DIR=/build CCACHE=ON DATAFLOW_EXECUTION_ENABLED=ON Python3_EXECUTABLE=$(which python) python-bindings
+            
+            echo "Debug: ccache statistics (after the build):"
+            ccache -s
 
             cd /concrete/frontends/concrete-python
 
             export COMPILER_BUILD_DIRECTORY="/build"
-            # TODO output setup-instance (https://github.com/zama-ai/slab-github-runner/issues/38)
-            export PROGRESS_MACHINE_NAME="hpc7a.96xlarge"
-
-            make benchmark
-            make process-benchmark-results-for-grafana
-
+            make whl
+            
             deactivate
 
-      - name: Checkout Slab repo
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - name: Setup Python
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
         with:
-          repository: zama-ai/slab
-          path: slab
-          token: ${{ secrets.CONCRETE_ACTIONS_TOKEN }}
-
-      - name: Send data to Slab
-        shell: bash
+          python-version: ${{ matrix.python-version }}
+      - name: ML Tests
         run: |
-          echo "Computing HMac on results file"
-          SIGNATURE="$(slab/scripts/hmac_calculator.sh frontends/concrete-python/progress.processed.json '${{ secrets.JOB_SECRET }}')"
-
-          cd frontends/concrete-python
-
-          echo "Sending results to Slab..."
-          curl -v -k \
-            -H "Content-Type: application/json" \
-            -H "X-Slab-Repository: ${{ github.repository }}" \
-            -H "X-Slab-Command: store_data_v2" \
-            -H "X-Hub-Signature-256: sha256=${SIGNATURE}" \
-            -d @progress.processed.json \
-            ${{ secrets.SLAB_URL }}
+          export HOME="/home/ubuntu"
+          export CONCRETE_PYTHON_WHEEL=$(pwd)/frontends/concrete-python/dist/*manylinux*.whl
+          apt update
+          apt install git git-lfs -y
+          pip install poetry==1.7.1
+          ./ci/scripts/test_cml.sh --use-wheel $CONCRETE_PYTHON_WHEEL --verbose
       - name: Slack Notification
         if: ${{ failure() && github.ref == 'refs/heads/main' }}
         continue-on-error: true
         uses: rtCamp/action-slack-notify@4e5fb42d249be6a45a298f3c9543b111b02f7907
         env:
           SLACK_COLOR: ${{ job.status }}
-          SLACK_MESSAGE: "concrete-python-benchmarks finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})"
+          SLACK_MESSAGE: "build-and-run-tests finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})"
 
   teardown-instance:
     if: ${{ always() && needs.setup-instance.result != 'skipped' }}
-    needs: [ setup-instance, concrete-python-benchmarks ]
+    needs: [ setup-instance, build-and-run-tests ]
     runs-on: ubuntu-latest
     steps:
       - name: Stop instance
         id: stop-instance
-        uses: zama-ai/slab-github-runner@801df0b8db5ea2b06128b7476c652f5ed5f193a8
+        uses: zama-ai/slab-github-runner@c0e7168795bd78f61f61146951ed9d0c73c9b701
         with:
           mode: stop
           github-token: ${{ secrets.SLAB_ACTION_TOKEN }}
           slab-url: ${{ secrets.SLAB_BASE_URL }}
           job-secret: ${{ secrets.JOB_SECRET }}
           label: ${{ needs.setup-instance.outputs.runner-name }}
+
       - name: Slack Notification
         if: ${{ failure() }}
         continue-on-error: true
