--- a/.github/workflows/concrete_optimizer.yml
+++ b/.github/workflows/concrete_optimizer.yml
@@ -1,73 +1,72 @@
-name: Optimizer - Tests
+name: concrete-optimizer test
 
 on:
-  workflow_call:
   workflow_dispatch:
-    secrets:
-      CONCRETE_CI_SSH_PRIVATE:
-        required: true
-      CONCRETE_ACTIONS_TOKEN:
-        required: true
-
-concurrency:
-  group: optimizer-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+  pull_request:
+    paths:
+      - .github/workflows/concrete_optimizer.yml
+      - compilers/concrete-optimizer/**
+      - backends/**
+      - tools/**
+  push:
+    branches:
+      - 'main'
+      - 'release/*'
 
 env:
   CARGO_TERM_COLOR: always
+  ACTION_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+  SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+  SLACK_USERNAME: ${{ secrets.BOT_USERNAME }}
+  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+concurrency:
+  group: concrete_optimizer-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 jobs:
   tests:
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-11]
-    runs-on: ${{ matrix.os }}
+        runson: ["ubuntu-latest", "aws-mac1-metal", "aws-mac2-metal"]
+    runs-on: ${{ matrix.runson }}
     env:
       RUSTFLAGS: -D warnings
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: "Setup"
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Setup
         uses: ./.github/workflows/optimizer_setup
-        with:
-          ssh_private_key: ${{ secrets.CONCRETE_CI_SSH_PRIVATE }}
-
       - name: Formatting
         run: |
+          cargo --version
           cd compilers/concrete-optimizer
           cargo fmt --check
-
       - name: Build
         run: |
           cd compilers/concrete-optimizer
           cargo build --release --all-targets
-
       - name: Lint
         run: |
           cd compilers/concrete-optimizer
           cargo clippy --release --all-targets
-
       - name: Tests
-        if: matrix.os == 'ubuntu-20.04'
         run: |
           cd compilers/concrete-optimizer
           cargo test --release --no-fail-fast --all-targets
           make -C concrete-optimizer-cpp test-ci
 
   benchmarks:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: "Setup"
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Setup
         uses: ./.github/workflows/optimizer_setup
-        with:
-          ssh_private_key: ${{ secrets.CONCRETE_CI_SSH_PRIVATE }}
-
       - name: Run benchmark
         run: |
           cd compilers/concrete-optimizer
           cargo bench -p v0-parameters -- --output-format bencher | tee bench_result.txt
-
       - name: Download PR base benchmark data
         if: ${{ github.event_name == 'pull_request' }}
         # for artifacts restrictions see https://github.com/actions/download-artifact/issues/3
@@ -81,7 +80,6 @@ jobs:
           name: ${{ runner.os }}-benchmark
           if_no_artifact_found: warn
           path: ./benchmark
-
       - name: Save benchmark result to file
         uses: benchmark-action/github-action-benchmark@4de1bed97a47495fc4c5404952da0499e31f5c29 # v1.20.3
         with:
@@ -94,7 +92,6 @@ jobs:
           comment-always: true
           # Enable Job Summary for PRs
           summary-always: true
-
       - name: Upload benchmark data
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
         with:
