--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -3,7 +3,7 @@ name: concrete-python tests linux-cpu
 on:
   workflow_dispatch:
   pull_request:
-    path:
+    paths:
       - .github/workflows/concrete_python_tests_linux.yml
       - frontends/concrete-python/**
   push:
