--- a/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
+++ b/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
@@ -10,13 +10,13 @@ serde = "1"
 
 clap = { version = "4.5.16", features = ["derive"] }
 
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer"] }
+tfhe = { version = "0.8.6", features = ["integer"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer", "x86_64-unix"] }
+tfhe = { version = "0.8.6", features = ["integer", "x86_64-unix"] }
 
 [target.aarch64-unknown-linux-gnu.dependencies]
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer", "aarch64-unix"] }
+tfhe = { version = "0.8.6", features = ["integer", "aarch64-unix"] }
 
 [target.x86_64-pc-windows-gnu.dependencies]
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer", "x86_64"] }
+tfhe = { version = "0.8.6", features = ["integer", "x86_64"] }
